--- a/pages/getCode.html
+++ b/pages/getCode.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
         <script>
-            let url = "http://127.0.0.1/api/code/"
+            let url = "https://www.orangej.xyz/api/code/"
             let xhr = new XMLHttpRequest();
             let img = $('img')
             function refreshCode() {
