--- a/pages/login.html
+++ b/pages/login.html
@@ -3,8 +3,8 @@
     <head>
         <title>登录</title>
         <meta charset="utf-8">
-        <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-        <script src="../static/js/login.js"></script>
+        <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+        
         <link rel="stylesheet" href="../static/css/login.css">
     </head>
     <body>
@@ -16,5 +16,6 @@
                 <input type="button" id="submit" value="登录">
             </div>
         </div>
+        <script src="../static/js/login.js"></script>
     </body>
 </html>
